--- a/src/main/resources/static/css/homelist.css
+++ b/src/main/resources/static/css/homelist.css
@@ -2,6 +2,10 @@ a:hover{
 	text-decoration: none;
 }
 
+.moredeep li{
+	
+}
+
 .moredeep li .white:hover,
 .moredeep li .white:visited,
 .moredeep li .white:focus {
