--- a/src/main/resources/static/css/attendce/box.css
+++ b/src/main/resources/static/css/attendce/box.css
@@ -6,6 +6,7 @@
 				margin-bottom: 20px;
 				width: 100%;
 				box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+				    margin-top: 10px;
 			}
 			
 			.box-header {
