--- a/src/main/resources/static/css/homelist.css
+++ b/src/main/resources/static/css/homelist.css
@@ -73,6 +73,7 @@ a:hover{
 .user-image-left {
 	max-width: 45px;
 	height: 45px;
+	width: 45px;
 	border-radius: 50%;
 }
 
@@ -225,3 +226,4 @@ li {
 	margin-top: 20px;
 	background: transparent;
 }
+td a 
