--- a/src/main/resources/static/css/mail/mail.css
+++ b/src/main/resources/static/css/mail/mail.css
@@ -37,6 +37,7 @@
 			
 			.uncheck{
 				margin-right: 10px;
+				padding-top: 8px;
 			}
 			
 			.fff>li,.files>li{
@@ -56,7 +57,12 @@
 			}
 			li .le{
 				margin-left: 16px;
+				
+				
 			}
+			.files li .le{
+			padding-top: 11px;
+			} 
 			.outside{
 				margin-top: 20px;
 			}
