菜单列表实现上移、下移功能排序； 字体同一变成14px，把原来的奇怪的大小变好了

--- a/src/main/resources/static/css/common/box.css
+++ b/src/main/resources/static/css/common/box.css
@@ -1,3 +1,6 @@
+*{
+	font-size: 14px;
+}
 .box {
 	position: relative;
 	border-radius: 3px;
@@ -145,4 +148,7 @@ body{
 
 .input-group-btn .btn-change{
 	padding:5px;
+}
+::-webkit-scrollbar {
+    width: 0;
 }
