--- a/src/main/resources/static/css/task/seetask.css
+++ b/src/main/resources/static/css/task/seetask.css
@@ -8,7 +8,8 @@
 				border-radius: 5px;
 				border: 0px solid black;
 				border-top: 3px solid rgba(158, 158, 158, 0.69);
-				margin-left: 0px;
+				margin-left: 18px;
+    			margin-right: 18px;
 				background-color: #FFFFFF;
 				
 			}
