--- a/src/main/resources/static/css/mail/mail.css
+++ b/src/main/resources/static/css/mail/mail.css
@@ -133,7 +133,7 @@
 				margin-left: 20px;
 				background-color: #FFFFFF;
 				border-radius: 5px;
-				border-top: 3px solid blue;
+				border-top: #337ab7 solid blue;
 				display:none;
 			}
 			
