--- a/src/main/resources/static/css/plan/plantable.css
+++ b/src/main/resources/static/css/plan/plantable.css
@@ -72,3 +72,14 @@
   .row .col-md-10 h1{
   font-size:24px;margin: 0;
   }
+  
+  .modal-header{
+  padding:5px;!important
+  }
+  
+  
+
+.modal-header .close {
+    margin-top: -13px;
+    margin-right: -12px;
+}
