一些简单的样式调节；

--- a/src/main/resources/static/css/homelist.css
+++ b/src/main/resources/static/css/homelist.css
@@ -11,10 +11,10 @@ a:hover{
 	background-color: #43da8d;
 }
 .red-badge{
-	background-color: #ff4a4a;
+	background-color: #d20000;
 }
 .blue-badge{
-	background-color: #00c4ff;
+	background-color: #00a4d6;
 }
 
 .white {
