--- a/src/main/resources/static/css/controlpanel.css
+++ b/src/main/resources/static/css/controlpanel.css
@@ -199,11 +199,14 @@
 			font-size: 25px;
 			}
 			#calendar td,th{
-				          padding-left: 23px;
-    					  padding-right: 20px;
-                         padding-top: 9px;
-    					padding-bottom: 9px;
-                          cursor: pointer;
+				        width: 14%;
+    padding: 9px 0;
+    text-align: center;
+    /* padding-left: 23px; */
+    /* padding-right: 20px; */
+    /* padding-top: 9px; */
+    /* padding-bottom: 9px; */
+    cursor: pointer;
 			}
 			.tdhuifu {
 			 padding-left: 13px !important;
