--- a/src/main/resources/static/css/common/skintheme.css
+++ b/src/main/resources/static/css/common/skintheme.css
@@ -30,8 +30,10 @@
 .blue-b{
 	background:#19a8cc;
 }
+.blue-none:focus,
 .blue-none:HOVER,
-.blue-none:visited{
+.blue-none:visited
+{
 	background: #19a8cc!important;
 	color: white;
 }
